@@ -1,10 +1,0 @@
-#!/usr/bin/env python
-
-"""
-clubak command-line tool
-"""
-
-from ClusterShell.CLI.Clubak import main
-
-if __name__ == '__main__':
-    main()
