@@ -1,10 +1,0 @@
-#!/usr/bin/env python
-
-"""
-nodeset command-line tool
-"""
-
-from ClusterShell.CLI.Nodeset import main
-
-if __name__ == '__main__':
-    main()
